--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,10 +27,10 @@ jobs:
         run: pwd
 
       - name: Restore dependencies
-        run: dotnet restore ClassLibraryProject
+        run: dotnet restore ClassLibraryProjects
 
       - name: Build
-        run: dotnet build ClassLibraryProject
+        run: dotnet build ClassLibraryProjects
 
       - name: Test
-        run: dotnet test ClassLibraryProject/StringLibraryTest/StringLibraryTest.csproj
+        run: dotnet test ClassLibraryProjects/StringLibraryTest/StringLibraryTest.csproj
